# uphf-ics

./: Cargo.toml  Dockerfile  README.md
docker/: docker-compose-caching.dev.yml  docker-compose.dev.yml  docker-compose.yml
docker/nginx-caching/: docker-compose.dev.yml  uphf-ics.conf.template
docker/nginx-full/: docker-compose.dev.yml  nginx.conf  uphf-ics.conf.template
lib/config/: Cargo.toml
lib/config/src/: lib.rs
lib/uphf-auth/: Cargo.toml
lib/uphf-auth/src/: lib.rs
lib/uphf-edt/: Cargo.toml
lib/uphf-edt/src/: lib.rs
src/: main.rs
