[package]
name = "uphf-ics"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "lib/*"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
  "cookies",
  "rustls-tls",
] }
scraper = "0.20"
actix-web = { version = "4", features = ["rustls"] }
snafu = "0.8"

[dependencies]
tokio = { workspace = true }
scraper = { workspace = true }
actix-web = { workspace = true }
snafu = { workspace = true }
actix-web-httpauth = "0.8"
uphf-auth = { path = "lib/uphf-auth" }
uphf-edt = { path = "lib/uphf-edt" }
config = { path = "lib/config" }
