[package]
name = "uphf-auth"
version = "0.1.0"
edition = "2021"

[features]
instrument = ["tracing"]

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true, optional = true }
config = { path = "../config" }
